[tool.poetry]
name = "ppdac"
version = "0.1.0"
description = "Medium article that provides an overview of the PPDAC data science life cycle"
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
httpx = "^0.27.2"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
ucimlrepo = "^0.0.7"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
